packages/rust/crates/xiuxian-wendao/tests/snapshots/gateway/studio/repo_index_status_endpoint_json.snap
---
source: packages/rust/crates/xiuxian-wendao/src/gateway/studio/test_support.rs
expression: value
---
{
  "active": 0,
  "checking": 0,
  "failed": 0,
  "indexing": 0,
  "maxConcurrency": 1,
  "queued": 1,
  "ready": 0,
  "repos": [
    {
      "attemptCount": 0,
      "phase": "queued",
      "repoId": "gateway-sync",
      "updatedAt": "[updated-at]"
    }
  ],
  "studioBootstrapBackgroundIndexingDeferredActivationAt": "[activation-at]",
  "studioBootstrapBackgroundIndexingDeferredActivationObserved": true,
  "studioBootstrapBackgroundIndexingDeferredActivationSource": "repo_index_status",
  "studioBootstrapBackgroundIndexingEnabled": false,
  "studioBootstrapBackgroundIndexingMode": "deferred",
  "syncConcurrencyLimit": 1,
  "syncing": 0,
  "targetConcurrency": 1,
  "total": 1,
  "unsupported": 0
}
